# dev-vault

./: .gitignore  Dockerfile  Dockerfile.frontend  Makefile  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-push
app/: __init__.py  main.py  models.py  serve_frontend.py
app/services/: __init__.py  projects_service.py  secrets_service.py
app/static/: index.html
tests/: conftest.py  test_main.py  test_projects.py  test_secrets_service.py
